--- a/src/main/webapp/resources/css/page.main.css
+++ b/src/main/webapp/resources/css/page.main.css
@@ -45,12 +45,12 @@
   text-decoration: none;
   color: #333;
   font-size: 1.1rem;
-  font-weight: 500;
+  font-weight: 600;
   transition: color 0.3s;
 }
 
 .nav-link:hover {
-  color: #0090ff;
+  color: #0090FF;
 }
 
 @media screen and (max-width: 768px) {
@@ -61,9 +61,9 @@
 
 /* 로그인 버튼 스타일 */
 .login-btn {
-  background-color: #b3d8ff;
+  background-color: #D5EFFF;
   border: none;
-  border-radius: 20px;
+  border-radius: 1rem;
   padding: 10px 20px;
   font-size: 1rem;
   font-weight: 600;
