--- a/src/main/webapp/resources/css/global.css
+++ b/src/main/webapp/resources/css/global.css
@@ -8,3 +8,29 @@ body {
   font-family: --apple-system, "Pretendard Variable", "Segoe UI", sans-serif;
   background-color: #ffffff;
 }
+
+.btn-custom {
+    background-color: #f1f5f9; /* 배경색 */
+    border-radius: 2rem; /* 모서리 둥글기 */
+    border: none; /* 기본 테두리 없애기 */
+    padding: 2rem; /* 패딩 */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: transform 0.3s ease; /* 스케일과 그림자 전환 효과 */
+    color:#2563eb;
+}
+
+.btn-custom:hover {
+    transform: scale(1.05); /* 호버 시 1.05배 확대 */
+}
+
+.btn-custom svg {
+    max-width: 70%; /* 아이콘 크기 자동 조정 */
+    max-height: 70%; /* 아이콘 크기 자동 조정 */
+}
+
+.btn-custom span {
+    font-weight: 600;
+    margin-top: 0.5rem; /* 텍스트와 아이콘 간격 */
+}
